# policy-to-production

./: .gitignore  LICENSE  README.md
00-docs/: artefact-classification.md  linting-rules.md
00-project-governance/: README.md  artefact-classification.md  branching-strategy.md  configuration-management.md  linting-rules.md  manifest.yaml
20-rulebook/: README.md  actors-and-roles.md  functional-onboarding.md  liquidity-and-waterfall.md
30-architecture/: README.md  component-inventory.md  security-and-privacy-zones.md  system-context.md
40-specifications/: RAEDME.md
40-specifications/liquidity-reservation/: README.md  liquidity-reservation-data-model-spec.md  liquidity-reservation-functional-spec.md  liquidity-reservation-interfaces-spec.md  liquidity-reservation-overview.md  liquidity-reservation-spec-overview.md  manifest.yaml  openapi.yaml
40-specifications/onboarding/: README.md  onboarding-data-model-spec.md  onboarding-functional-spec.md  onboarding-interfaces-spec.md  onboarding-spec-overview.md  openapi.yaml
50-tests/: README.md
50-tests/200-contract-definitions/: README.md
50-tests/300-security/: README.md
50-tests/400-operational/: README.md
50-tests/900-test-vectors/: README.md
60-code/: README.md
60-code/access-gateway/: main_test.go
60-code/alias-service/: Cargo.toml  README.md  manifest.yaml
60-code/alias-service/src/: main.rs
60-code/governance-common-rust/: Cargo.toml
60-code/governance-common-rust/src/: lib.rs
60-tests/: README.md
70-reports/: README.md
80-ci-cd/: README.md
99-launch-materials/: README.md
(+54 files in other folders)
