# artefact_type: code
# visibility: restricted
# audience:
#   - ECB
#   - PSP
# form: text
# role: implementation
# status: normative
# owner: ECB
#
# DISCLAIMER:
# The code in this folder is **illustrative and educational**.
# It does not represent official implementations, production-ready components,
# or endorsed technical approaches for the Digital Euro or any other real-world system.
#
# PURPOSE:
# This component serves as a reference implementation to demonstrate how technical
# specifications are refined into code while maintaining strict auditability,
# traceability, and mechanical governance across distinct institutional boundaries.
# This structure enables automated compliance verification and live impact analysis.

[package]
name = "alias-service"
version = "0.1.0"
edition = "2021"

[dependencies]
governance-common = { path = "../governance-common-rust" }
